--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -22,6 +22,7 @@ img {
     width: 100%;
 }
 
+/* Quiz box styling */ 
 .container {
     max-width: 900px;
     margin: 0 auto;
@@ -99,6 +100,7 @@ img {
     padding: 5px 0;
 }
 
+/* Application buttons */
 .buttons {
     margin: 1.5rem 0 4rem 0;
 }
